--- a/docker/nginx/conf.d/rachmat.conf
+++ b/docker/nginx/conf.d/rachmat.conf
@@ -12,7 +12,7 @@ limit_req_zone $binary_remote_addr zone=login_limit:10m rate=5r/m;
 server {
     listen 80;
     listen [::]:80;
-    server_name rachmat.local *.rachmat.local;
+    server_name srv889998.hstgr.cloud *.srv889998.hstgr.cloud rachmat.local *.rachmat.local;
     
     # Security headers
     add_header X-Frame-Options "SAMEORIGIN" always;
@@ -27,9 +27,9 @@ server {
 server {
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
-    server_name rachmat.local *.rachmat.local;
+    server_name srv889998.hstgr.cloud *.srv889998.hstgr.cloud rachmat.local *.rachmat.local;
     
-    # SSL certificates
+    # SSL certificates (using self-signed for now, FrankenPHP handles actual SSL)
     ssl_certificate /etc/ssl/certs/rachmat.local.crt;
     ssl_certificate_key /etc/ssl/private/rachmat.local.key;
     
