--- a/docker/frankenphp/Caddyfile
+++ b/docker/frankenphp/Caddyfile
@@ -6,7 +6,7 @@
 {
     # Global options
     email admin@srv889998.hstgr.cloud
-    auto_https on
+    auto_https disable_redirects
     
     # Enable FrankenPHP
     frankenphp
