--- a/docker/frankenphp/Caddyfile
+++ b/docker/frankenphp/Caddyfile
@@ -28,6 +28,51 @@
         X-Frame-Options SAMEORIGIN
         X-Content-Type-Options nosniff
         X-XSS-Protection "1; mode=block"
+    }
+    
+    # Health check endpoint
+    handle /health {
+        respond "OK" 200
+    }
+    
+    # API routes
+    handle /api/* {
+        php_server
+    }
+    
+    # File server for static assets
+    file_server {
+        hide .htaccess
+    }
+    
+    # Logs
+    log {
+        output file /app/storage/logs/caddy.log
+        level INFO
+    }
+    
+    # Error handling
+    handle_errors {
+        respond "{err.status_code} {err.status_text}"
+    }
+}
+
+# Direct HTTPS access for testing (bypassing nginx)
+srv889998.hstgr.cloud:443 {
+    # Document root
+    root * /app/public
+    
+    # Handle PHP files with FrankenPHP
+    php_server
+    
+    # Handle Laravel routing
+    try_files {path} /index.php
+    
+    # Security headers
+    header {
+        X-Frame-Options SAMEORIGIN
+        X-Content-Type-Options nosniff
+        X-XSS-Protection "1; mode=block"
         Strict-Transport-Security "max-age=31536000; includeSubDomains; preload"
         Referrer-Policy "strict-origin-when-cross-origin"
     }
