--- a/Caddyfile
+++ b/Caddyfile
@@ -3,13 +3,20 @@
     admin off
     # Email for Let's Encrypt notifications
     email admin@srv889998.hstgr.cloud
-   
+    # Enable auto HTTPS
+    auto_https enable_redirects
 }
 
 srv889998.hstgr.cloud {
+    # TLS configuration
+    tls {
+        issuer acme
+    }
+
     # Enable debug logging
     log {
         level INFO
+        format json
     }
 
     # Transparent proxy to your app
@@ -34,6 +41,8 @@ srv889998.hstgr.cloud {
         X-XSS-Protection "1; mode=block"
         # Referrer policy
         Referrer-Policy "strict-origin-when-cross-origin"
+        # Remove Server header
+        -Server
     }
 }
 
