--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,8 +13,8 @@ services:
             - .:/app:ro
         environment:
             - CADDY_HOST=srv889998.hstgr.cloud
-        cap_add:
-            - NET_ADMIN
+        depends_on:
+            - app
         networks:
             - web
     app:
@@ -31,8 +31,6 @@ services:
             - './storage:/app/storage'
         environment:
             - APP_URL=https://srv889998.hstgr.cloud
-            - ASSET_URL=https://srv889998.hstgr.cloud
-            - VITE_APP_URL=https://srv889998.hstgr.cloud
         depends_on:
             - mysql
             - redis
